# server

./: README.md
DianaSrv/: Cargo.toml
DianaSrv/src/: lib.rs  main.rs
DianaSrv/src/backend/: server.rs
DianaSrv/src/resource/: ServerConfig.toml
DianaSrv/src/utils/: readers.rs
diana_srv/: Cargo.toml  run.sh
diana_srv/resource/: ServerConfig.toml
diana_srv/resource/html/: index.html  site_not_found.html
diana_srv/src/: main.rs  utils.rs
diana_srv/src/backend/: server.rs
diana_srv/src/utils/: configs.rs  formatters.rs  readers.rs
